# adverse-events-analyzer

./: Cargo.toml  README.md  example.csv
src/: breakdown.rs  lib.rs  main.rs  time_period.rs
wasm_wrapper/: Cargo.toml
wasm_wrapper/src/: lib.rs
web/: .eslintrc.json  .gitignore  package.json  pnpm-lock.yaml  rollup.config.js  vite.config.js
web/public/: index.html
web/src/: app.js  date-utils.js  date-utils.ts  formatters.js  formatters.ts  global.css  index.html  main.js  stores.ts  utils.js  wasm-wrapper.js  wasm-wrapper.ts  wasm-wrappers.js
web/src/components/: App.svelte  CsvTable.svelte  DateRange.svelte  DateRangePicker.svelte  EventCountTable.svelte  EventCounts.svelte  EventTrend.svelte  FrappeChart.svelte  Paginator.svelte  PercentageBreakdowns.svelte  PieBreakdowns.svelte  PrintButton.svelte  RecordsList.svelte  RichDate.svelte  ViewFilter.svelte
