[package]
name = "mcw-anesth-adverse-events-analyzer"
version = "0.1.0"
authors = ["Jacob Mischka <jacob@mischka.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.6"
serde = { version = "1.0.126", features = ["derive"] }
deserialize = { path = "../deserialize" }

[dependencies.zip]
version = "0.5.12"
default-features = false
features = ["deflate"]
