[package]
name = "mcw_anesth_adverse_events_wasm_wrapper"
version = "0.1.0"
authors = ["Jacob Mischka <jacob@mischka.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
new-innov-utils = { path = "../../" }
wasm-bindgen = "0.2.67"
serde_json = "1.0"
chrono = { version = "0.4.15", features = ["serde"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
